# Operating-Systems

./: .gitignore  README.md
OSS16_Assignment2/: .gitignore  CMakeLists.txt  README.md
OSS16_Assignment2/include/: back_store.h
OSS16_Assignment2/src/: back_store.c
OSS16_Assignment2/test/: tests.cpp
OSS16_Assignment3/: CMakeLists.txt  README.md
OSS16_Assignment3/src/: producer_consumer.c
OSS16_Project1/: CMakeLists.txt  README.md
OSS16_Project1/include/: processing_scheduling.h
OSS16_Project1/src/: analysis.c  process_scheduling.c
OSS16_Project1/test/: tests.cpp
OSS16_Project2/: CMakeLists.txt  README.md
OSS16_Project2/include/: page_swap.h
OSS16_Project2/src/: page_swap.c
OSS16_Project2/test/: tests.cpp
OSS16_Project3/: .gitignore  CMakeLists.txt  README.md
OSS16_Project3/include/: S16FS.h  backend.h
OSS16_Project3/src/: S16FS.c  backend.c
OSS16_Project3/test/: tests.cpp
P3_example/: .gitignore  CMakeLists.txt
P3_example/include/: backend.h
P3_example/src/: S16FS.c  backend.c
P3_example/test/: tests.cpp
back_store/: CMakeLists.txt
back_store/include/: back_store.h
back_store/src/: back_store.c
back_store/test/: tests.cpp
